Fix tooltip arrow visible on desktop layout
Forgot it existed since tooltip covered it (position lowered), caused random gray dot to appear when hovering over timestamp on desktop

--- a/src/timeline.css
+++ b/src/timeline.css
@@ -17,6 +17,11 @@
     @apply md:hidden !bottom-6;
 }
 
+/* Hide tooltip arrow */
+.tooltip::after {
+    @apply !hidden;
+}
+
 .timeline-timestamp {
     @apply flex flex-col h-full justify-center;
     @apply text-end whitespace-nowrap md:ml-4 scroll-mt-20;
